next.js + three.js + styled-components starter kit

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "debounce": "^1.2.0",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "three": "^0.120.1",
+    "use-callback-ref": "^1.2.4"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
