--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "use-callback-ref": "^1.2.4"
   },
   "devDependencies": {
+    "@toolia/json-args": "^1.1.1",
     "babel-plugin-styled-components": "^1.8.0"
   },
   "license": "MIT"
