--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "license": "MIT"
 }
