--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "glide-2d",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node --openssl-legacy-provider ./node_modules/.bin/next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "debounce": "^1.2.0",
-    "meyda": "^5.1.0",
+    "debounce": "^2.0.0",
+    "meyda": "^5.6.2",
     "next": "latest",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-is": "^16.8.0",
-    "styled-components": "^5.0.0",
-    "three": "^0.120.1",
-    "use-callback-ref": "^1.2.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "styled-components": "^6.1.8",
+    "three": "^0.160.1",
+    "use-callback-ref": "^1.3.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "babel-plugin-styled-components": "^2.1.4"
   },
   "license": "MIT"
 }
