--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node --openssl-legacy-provider ./node_modules/.bin/next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "node --openssl-legacy-provider ./node_modules/.bin/next build",
+    "start": "node --openssl-legacy-provider ./node_modules/.bin/next start"
   },
   "dependencies": {
     "debounce": "^2.0.0",
